Add displayId to XSLX export and sort by it